Add tests, vec2, error codes