@@ -6,8 +6,12 @@ plugins {
 dependencies {
     implementation project(':unsafe')
     compileOnly "org.jetbrains:annotations:+"
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
 }
 compileJava {
+    options.compilerArgs << '--enable-preview' << '-Xlint:-preview'
+}
+compileTestJava {
     options.compilerArgs << '--enable-preview' << '-Xlint:-preview'
 }
 publishing {
@@ -36,4 +40,8 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
+}
+test {
+    useJUnitPlatform()
+    jvmArgs '--enable-preview', '--enable-native-access=ALL-UNNAMED'
 }
